4B/cs444/tests/pass/pass_publicmethods.joos
/* pass: public methods */
public class A {
  public A() {}
  public int m() {
    return 42;
  }
}

