4B/cs444/tests/fail/fail_nonstaticaccessofstaticfield.joos
/* fail: non-static access of static field */
public class A {
  public static int x;
  public int m() {
    A a = new A();
    return a.x;
  }
}

